practica to_do finalizada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <form>
                 <input type="text" id="inputTarea">
                 <select id="selectorPrioridadTarea">
-                    <option value="diaria">DIARIO</option>
+                    <option value="diario">DIARIO</option>
                     <option value="mensual">MENSUAL</option>
                     <option value="urgente">URGENTE</option>
                     <label id="tareaseleccionada"></label>
